--- a/public/style.css
+++ b/public/style.css
@@ -20,17 +20,24 @@
 
 body {
   font-size: 2vw;
+  font-family: Helvetica;
+  font-weight: lighter;
 }
 
-h2 {
+.heading {
   margin-left: 7px;
+  text-align: center;
+  border-radius: 3px 3px 3px 3px;
+  background-color: #137BE4;
+  color: white;
 }
 
-li {
+.question {
   margin-left: 7px;
 }
 
 textarea {
+  border-radius: 3px 3px 3px 3px;
   margin-left: 7px;
   margin-top: 7px;
   width: 40vw;
