--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 #logo {
-  font-size: 15vw;
+  font-family: Helvetica;
+  font-weight: lighter;
+  font-size: 12vw;
   text-align:center
 }
 
@@ -7,7 +9,7 @@
   width: 19vw;
   height: 10vh;
   margin: auto;
-  font-size: 5vh;
+  font-size: 1.3em;
 }
 
 #login-button {
@@ -24,8 +26,13 @@ body {
   font-weight: lighter;
 }
 
+.spacer {
+  height: 2vh;
+}
+
 .heading {
   margin-left: 7px;
+  top: 7px;
   text-align: center;
   border-radius: 3px 3px 3px 3px;
   background-color: #137BE4;
